--- a/ponkana.html
+++ b/ponkana.html
@@ -1,4 +1,5 @@
-<meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
+<meta name='viewport' content='width=device-width, initial-scale=1'/>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
+            position: relative; /* Ensure the robot icon can be positioned correctly */
         }
         header {
             background-color: #007bff;
@@ -81,6 +83,24 @@
         .button-group a:hover {
             background-color: #218838;
         }
+        /* Robot Icon Styles */
+        .robot-icon {
+            position: absolute;
+            right: 20px;
+            bottom: 20px;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: #007bff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+        .robot-icon img {
+            width: 40px;
+            height: 40px;
+        }
     </style>
 </head>
 <body>
@@ -110,6 +130,11 @@
         </p>
     </div>
 
+    <!-- Robot Icon -->
+    <a href="robot.html" class="robot-icon">
+        <img src="robot-icon.png" alt="Robot Icon">
+    </a>
+
     <script>
         // Event listeners for dropdown items
         document.getElementById('contact-us').addEventListener('click', () => {
@@ -121,4 +146,4 @@
         });
     </script>
 </body>
-</html>
+                        </html>
