--- a/robot.html
+++ b/robot.html
@@ -120,33 +120,6 @@
         let awaitingName = false; 
         let voiceEnabled = true; // Voice command is enabled by default
 
-        // Check input on keypress
-        function checkInput(event) {
-            if (event.key === "Enter") {
-                let input = document.getElementById("userInput").value.trim();
-                let messages = document.getElementById("messages");
-
-                if (awaitingName) {
-                    userName = input;
-                    messages.innerHTML += `<div class="user-message"><strong>User:</strong> ${userName}</div>`;
-                    messages.innerHTML += `<div class="ponkana-message"><strong>Ponkana Funeral Parlor:</strong> Hi ${userName}, Welcome to Ponkana Funeral Parlor. How can we assist today?</div>`;
-                    messages.innerHTML += `
-                        <a href="#" class="option">Our Policies</a>
-                        <a href="#" class="option">Our Contact</a>
-                        <a href="#" class="option">Our Locations</a>
-                    `;
-                    awaitingName = false; 
-                } else if (input.toLowerCase() === "hi") {
-                    messages.innerHTML += `<div class="user-message"><strong>User:</strong> Hi</div>`;
-                    messages.innerHTML += `<div class="ponkana-message"><strong>Ponkana Funeral Parlor:</strong> Please enter your name.</div>`;
-                    awaitingName = true;
-                }
-
-                document.getElementById("userInput").value = ""; // Clear input field
-                messages.scrollTop = messages.scrollHeight; // Auto-scroll to latest message
-            }
-        }
-
         // Initialize Speech Recognition API
         function startVoiceRecognition() {
             if (voiceEnabled) {
@@ -159,6 +132,11 @@
                     const transcript = event.results[0][0].transcript;
                     document.getElementById("userInput").value = transcript;
                     checkInput({ key: 'Enter' }); // Simulate pressing Enter to process the voice input
+                    speak(`You said: ${transcript}`); // Assistant speaks back the user input
+                    if (awaitingName) {
+                        userName = transcript;  // Capture name if the assistant is awaiting it
+                        speak(`Your name is now set as ${userName}`);
+                    }
                 };
 
                 recognition.onerror = function(event) {
@@ -173,19 +151,51 @@
             if (voiceEnabled) {
                 document.getElementById("switchBtn").textContent = "Turn Off Voice Command";
                 document.getElementById("welcomeMessage").textContent = "Voice commands are now enabled. You can turn them off anytime.";
+                startVoiceRecognition(); // Start voice recognition again if turned back on
             } else {
                 document.getElementById("switchBtn").textContent = "Turn On Voice Command";
                 document.getElementById("welcomeMessage").textContent = "Voice commands are now disabled. Type your message instead.";
+                speechSynthesis.cancel(); // Stop any ongoing speech
             }
+        }
+
+        // Check input on keypress
+        function checkInput(event) {
+            if (event.key === "Enter") {
+                let input = document.getElementById("userInput").value.trim();
+                let messages = document.getElementById("messages");
+
+                if (awaitingName) {
+                    userName = input;
+                    messages.innerHTML += `<div class="user-message"><strong>User:</strong> ${userName}</div>`;
+                    messages.innerHTML += `<div class="ponkana-message"><strong>Ponkana Funeral Parlor:</strong> Hi ${userName}, Welcome to Ponkana Funeral Parlor. How can we assist today?</div>`;
+                    awaitingName = false; 
+                    speak(`Hi ${userName}, Welcome to Ponkana Funeral Parlor. How can we assist today?`);
+                } else if (input.toLowerCase() === "hi") {
+                    messages.innerHTML += `<div class="user-message"><strong>User:</strong> Hi</div>`;
+                    messages.innerHTML += `<div class="ponkana-message"><strong>Ponkana Funeral Parlor:</strong> Please enter your name.</div>`;
+                    awaitingName = true;
+                    speak("Please enter your name.");
+                }
+
+                document.getElementById("userInput").value = ""; // Clear input field
+                messages.scrollTop = messages.scrollHeight; // Auto-scroll to latest message
+            }
+        }
+
+        // Speak text using the SpeechSynthesis API
+        function speak(text) {
+            const utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = 'en-US';
+            speechSynthesis.speak(utterance);
         }
 
         // Display a welcome message when the user logs in (or enters the site)
         window.onload = function() {
-            if (!userName) {
-                document.getElementById("messages").innerHTML += `<div class="ponkana-message"><strong>Ponkana Funeral Parlor:</strong> Welcome to Ponkana Funeral. If you are not disabled, you can turn off the voice command.</div>`;
-            }
-        };
+            speak("Welcome to Ponkana Funeral. Voice command is enabled.");
+            startVoiceRecognition(); // Always start listening for voice commands when the page loads
+        }
     </script>
 
 </body>
-</html>
+    </html>
