--- a/ponkana.html
+++ b/ponkana.html
@@ -1,122 +1,85 @@
-<meta name='viewport' content='width=device-width, initial-scale=1'/>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ponkana Funerals</title>
+    <title>Ponkana Funeral Service</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            position: relative; /* Ensure the robot icon can be positioned correctly */
-        }
-        header {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        header h1 {
-            margin: 0;
-        }
-        nav {
-            position: relative;
-        }
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-        .dropdown-button {
-            background-color: #0056b3;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .dropdown-button:hover {
-            background-color: #003f8a;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: white;
-            min-width: 200px;
-            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-            border-radius: 5px;
-        }
-        .dropdown-content a {
-            color: black;
-            padding: 10px 15px;
-            text-decoration: none;
-            display: block;
-            border-bottom: 1px solid #f0f0f0;
-        }
-        .dropdown-content a:hover {
-            background-color: #f1f1f1;
-        }
-        .dropdown:hover .dropdown-content {
-            display: block;
+            margin: 20px;
+            background-color: #f4f4f4;
+            text-align: center;
         }
         .content {
-            padding: 20px;
-        }
-        .button-group {
             margin-top: 20px;
-            display: flex;
-            gap: 10px;
         }
-        .button-group a {
-            background-color: #28a745;
+        #header {
+            background: #007bff;
             color: white;
-            padding: 10px 15px;
-            text-decoration: none;
-            border-radius: 5px;
-            display: inline-block;
-        }
-        .button-group a:hover {
-            background-color: #218838;
-        }
-        /* Robot Icon Styles */
-        .robot-icon {
-            position: absolute;
-            right: 20px;
-            bottom: 20px;
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            background-color: #007bff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
+            padding: 10px;
+            text-align: center;
+            font-size: 24px;
         }
         .robot-icon img {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+        }
+        .option {
+            display: block;
+            margin: 10px;
+            padding: 10px;
+            background: #007bff;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 200px;
+            margin: 5px auto;
+        }
+        .option:hover {
+            background: #0056b3;
+        }
+        #voiceBtn {
+            background-color: #28a745;
+            color: white;
+            padding: 10px;
+            margin-top: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #voiceBtn:hover {
+            background-color: #218838;
+        }
+        #switchBtn {
+            background-color: #ffc107;
+            color: black;
+            padding: 10px;
+            margin-top: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #switchBtn:hover {
+            background-color: #e0a800;
+        }
+        #welcomeMessage {
+            font-size: 16px;
+            margin-bottom: 10px;
+            color: #007bff;
         }
     </style>
 </head>
 <body>
+
     <header>
-        <h1>Ponkana Funerals</h1>
-        <nav>
-            <div class="dropdown">
-                <button class="dropdown-button">Menu</button>
-                <div class="dropdown-content">
-                    <a href="#" id="contact-us">Contact Us</a>
-                    <a href="#" id="about-owners">About the Owners</a>
-                    <a href="policies.html">Our Policies</a>
-                    <a href="pay.html">Pay Now</a>
-                </div>
-            </div>
-        </nav>
+        <div id="header">
+            <h1>Ponkana Funeral Service</h1>
+        </div>
     </header>
 
     <div class="content">
@@ -132,18 +95,68 @@
 
     <!-- Robot Icon -->
     <a href="robot.html" class="robot-icon">
-        <img src="robot-icon.png" alt="Robot Icon">
+        <img src="robot.png" alt="Robot Icon">
     </a>
 
-    <script>
-        // Event listeners for dropdown items
-        document.getElementById('contact-us').addEventListener('click', () => {
-            alert('Contact Us:\nAkasia: 012 701 1216\nMain: 082 645 6133');
-        });
+    <!-- Voice Command and Switch -->
+    <div id="voiceCommand">
+        <button id="voiceBtn" onclick="startVoiceRecognition()">🎤 Speak</button>
+        <button id="switchBtn" onclick="toggleVoiceCommand()">Turn Off Voice Command</button>
+    </div>
 
-        document.getElementById('about-owners').addEventListener('click', () => {
-            alert('About the Owners:\nThe funeral parlour was founded by Mr. Ponkana.');
-        });
+    <script>
+        let voiceEnabled = true; // Voice command is enabled by default
+
+        // Initialize Speech Recognition API
+        function startVoiceRecognition() {
+            if (voiceEnabled) {
+                const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+
+                recognition.lang = 'en-US';
+                recognition.start();
+
+                recognition.onresult = function(event) {
+                    const transcript = event.results[0][0].transcript;
+                    alert("You said: " + transcript); // Speak back the user's input
+                    processVoiceInput(transcript);  // Process the voice input (you can add custom processing here)
+                };
+
+                recognition.onerror = function(event) {
+                    console.error("Speech Recognition Error", event);
+                };
+            }
+        }
+
+        // Toggle voice command on/off
+        function toggleVoiceCommand() {
+            voiceEnabled = !voiceEnabled; // Toggle the status
+            if (voiceEnabled) {
+                document.getElementById("switchBtn").textContent = "Turn Off Voice Command";
+                startVoiceRecognition(); // Start voice recognition again if turned back on
+            } else {
+                document.getElementById("switchBtn").textContent = "Turn On Voice Command";
+                alert("Voice command is now disabled. Please type your messages.");
+            }
+        }
+
+        // Function to process the voice input (you can customize this as needed)
+        function processVoiceInput(input) {
+            // For example, let's handle a few specific commands
+            if (input.toLowerCase().includes("contact us")) {
+                alert('Contact Us:\nAkasia: 012 701 1216\nMain: 082 645 6133');
+            } else if (input.toLowerCase().includes("about the owners")) {
+                alert('About the Owners:\nThe funeral parlour was founded by Mr. Ponkana.');
+            } else {
+                alert("Sorry, I didn't understand that command.");
+            }
+        }
+        
+        // Optional: Automatically greet the user when they land on the page
+        window.onload = function() {
+            if (voiceEnabled) {
+                alert("Welcome to Ponkana Funeral Service. Voice commands are enabled. You can turn them off anytime.");
+            }
+        }
     </script>
 </body>
-                        </html>
+</html>
