--- a/ponkana.html
+++ b/ponkana.html
@@ -1,26 +1,31 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ponkana Funerals</title>
     <style>
+        /* Basic styling */
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
             background-color: #f4f4f4;
             text-align: center;
         }
         header {
             background-color: #007bff;
             color: white;
-            padding: 10px 20px;
+            padding: 15px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-wrap: wrap;
         }
         header h1 {
             margin: 0;
+            flex-grow: 1;
+            font-size: 24px;
         }
         nav {
             position: relative;
@@ -48,6 +53,7 @@ DOCTYPE html>
             box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
             z-index: 1;
             border-radius: 5px;
+            margin-top: 5px;
         }
         .dropdown-content a {
             color: black;
@@ -82,6 +88,20 @@ DOCTYPE html>
         #toggleVoiceCommand:hover {
             background-color: #218838;
         }
+        /* Ensure responsiveness */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                text-align: center;
+            }
+            .dropdown-button {
+                width: 100%;
+                margin-top: 10px;
+            }
+            .dropdown-content {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -96,6 +116,7 @@ DOCTYPE html>
                     <a href="#" id="about-owners">About the Owners</a>
                     <a href="policies.html">Our Policies</a>
                     <a href="pay.html">Pay Now</a>
+                    <a href="profile.html">Profile</a> <!-- Profile link added -->
                 </div>
             </div>
         </nav>
@@ -200,4 +221,4 @@ DOCTYPE html>
     </script>
 
 </body>
-</html>
+        </html>
