--- a/ponkana.html
+++ b/ponkana.html
@@ -117,6 +117,7 @@
                     <a href="policies.html">Our Policies</a>
                     <a href="pay.html">Pay Now</a>
                     <a href="profile.html">Profile</a> <!-- Profile link added -->
+                    <a href="freecall.html">Free Call</a> <!-- Added Free Call Link -->
                 </div>
             </div>
         </nav>
@@ -221,4 +222,4 @@
     </script>
 
 </body>
-        </html>
+</html>
