--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             align-items: center;
             height: 100vh;
             flex-direction: column;
+            text-align: center;
         }
         h1 {
             font-size: 36px;
@@ -44,13 +45,37 @@
                 width: 100%;
             }
         }
+        .languages {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #555;
+        }
     </style>
 </head>
 <body>
+
     <h1>Ponkana Funerals</h1>
     <div class="loading-container">
         <div class="loading-bar"></div>
     </div>
+
+    <div class="languages">
+        <p>Siyaphila nawe (Zulu)</p>
+        <p>Re na le wena (Sesotho)</p>
+        <p>Sithatha uhambo nawe (Xhosa)</p>
+        <p>Ri na wena (Venda)</p>
+        <p>Si na wena (Tsonga)</p>
+        <p>Re na le wena (Tswana)</p>
+        <p>Hina ri na wena (Xitsonga)</p>
+        <p>We are with you (English)</p>
+        <p>Sipho ubudlelwane (Ndebele)</p>
+        <p>Ons is saam met jou (Afrikaans)</p>
+    </div>
+
+    <audio autoplay>
+        <source src="your-audio-file.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <script>
         // Redirect to ponkana.html after 10 seconds
@@ -58,5 +83,6 @@
             window.location.href = 'ponkana.html';
         }, 10000); // 10 seconds
     </script>
+
 </body>
-</html>
+    </html>
