--- a/ponkana.html
+++ b/ponkana.html
@@ -48,7 +48,7 @@
         .dropdown-content {
             display: none;
             position: absolute;
-            background-color: white;
+            background-color: Black;
             min-width: 200px;
             box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
             z-index: 1;
@@ -56,7 +56,7 @@
             margin-top: 5px;
         }
         .dropdown-content a {
-            color: black;
+            color: gold;
             padding: 10px 15px;
             text-decoration: none;
             display: block;
