--- a/ponkanaregistration.html
+++ b/ponkanaregistration.html
@@ -1,4 +1,5 @@
-<meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
+<meta name='viewport' content='width=device-width, initial-scale=1'/>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -158,7 +159,7 @@
             let email = document.getElementById("loginEmail").value;
             let password = document.getElementById("loginPassword").value;
 
-            let response = await fetch("your_api_endpoint/login", {
+            let response = await fetch("https://a264-41-145-208-193.ngrok-free.app/login", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ email, password })
@@ -166,7 +167,7 @@
 
             let result = await response.json();
             if (result.success) {
-                window.location.href = "ponkana.html";
+                window.location.href = "login.html"; // Redirect to login.html upon successful login
             } else {
                 alert("Login failed: " + result.message);
             }
@@ -188,7 +189,7 @@
                                   document.getElementById("policy3").checked
             };
 
-            let response = await fetch("your_api_endpoint/register", {
+            let response = await fetch("https://a264-41-145-208-193.ngrok-free.app/register", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(userData)
@@ -196,7 +197,7 @@
 
             let result = await response.json();
             if (result.success) {
-                window.location.href = "ponkana.html";
+                window.location.href = "ponkana.html"; // Redirect to ponkana.html upon successful registration
             } else {
                 alert("Registration failed: " + result.message);
             }
@@ -204,4 +205,4 @@
     </script>
 
 </body>
-</html>
+                </html>
