--- a/ponkana.html
+++ b/ponkana.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -71,30 +71,22 @@ DOCTYPE html>
         .content {
             padding: 20px;
         }
-        .image-slider {
-            position: relative;
-            max-width: 600px;
-            margin: 20px auto;
-            overflow: hidden;
-        }
-        .image-slider img {
-            width: 100%;
-            display: none;
-        }
-        .image-slider img.active {
-            display: block;
-        }
-        .owner-info {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 20px 0;
-        }
-        .owner-info img {
-            width: 100px;
-            height: auto;
+        .robot-icon img {
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
-            margin-right: 10px;
+            cursor: pointer;
+        }
+        #toggleVoiceCommand {
+            margin-top: 20px;
+            padding: 10px 15px;
+            background-color: #28a745;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #toggleVoiceCommand:hover {
+            background-color: #218838;
         }
         /* Ensure responsiveness */
         @media (max-width: 768px) {
@@ -124,8 +116,8 @@ DOCTYPE html>
                     <a href="#" id="about-owners">About the Owners</a>
                     <a href="policies.html">Our Policies</a>
                     <a href="pay.html">Pay Now</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="freecall.html">Free Call</a>
+                    <a href="profile.html">Profile</a> <!-- Profile link added -->
+                    <a href="freecall.html">Free Call</a> <!-- Added Free Call Link -->
                 </div>
             </div>
         </nav>
@@ -135,24 +127,11 @@ DOCTYPE html>
         <h2>About Us</h2>
         <p>
             Ponkana Funeral Service is a funeral service provider located in Pretoria, South Africa. 
+            There are two branches, one located at 1658 M20 Rd, Opp Erasmus Bus Depot, Erasmus, Pretoria, 0001 1234, 
+            and another at 260 Mabopane Unit A Road, Mabopane Unit A, Mabopane, Gauteng 5. 
             They offer funeral services, including planning and coordination of funeral events. 
             You can contact them at 082 645 6133 for more information or to inquire about their services.
         </p>
-        
-        <div class="image-slider">
-            <img src="image1.png" class="active" alt="Image 1">
-            <img src="image2.png" alt="Image 2">
-            <img src="image3.png" alt="Image 3">
-            <img src="image4.png" alt="Image 4">
-        </div>
-
-        <div class="owner-info">
-            <img src="owner.png" alt="Owner">
-            <div>
-                <h3>Lucas Ponkana</h3>
-                <p>Founder of Ponkana Funerals</p>
-            </div>
-        </div>
     </div>
 
     <!-- Robot Icon -->
@@ -240,16 +219,6 @@ DOCTYPE html>
         document.getElementById('about-owners').addEventListener('click', () => {
             alert('About the Owners:\nThe funeral parlour was founded by Mr. Ponkana.');
         });
-
-        // Image slider functionality
-        let currentIndex = 0;
-        const images = document.querySelectorAll('.image-slider img');
-        setInterval(() => {
-            images[currentIndex].classList.remove('active');
-            currentIndex = (currentIndex + 1) % images.length;
-            images[currentIndex].classList.add('active');
-        }, 3000); // Change image every 3 seconds
-
     </script>
 
 </body>
